syntax = "proto3";

package com.lightbend.farmtrust.farmitem.api;

import "akkaserverless/annotations.proto";
import "farm_item/farm_item_domain.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "FarmItemTopic";


service FarmItemTopicService {
    rpc ProtobufFromTopic(domain.HarvestStarted) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing.in = {
            topic:  "farm-land-events"
        };
    }

}
